# PaRMAT

./: .gitignore
Release/: .gitignore
src-with-cmake/: CMakeLists.txt  GraphGen_notSorted.cpp  GraphGen_notSorted.hpp  GraphGen_sorted.cpp  GraphGen_sorted.hpp  PaRMAT.cpp  ReadMe.md  internal_config.hpp  utils.cpp  utils.hpp
src-with-cmake/play/: play.cpp
src-with-cmake/util/: log.cpp  log.h
